--- a/contract/src/main/resources/application.properties
+++ b/contract/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=contract
+spring.datasource.url=jdbc:postgresql://cobros-recaudos.czecuoqow6a4.us-east-1.rds.amazonaws.com:5432/cobrosRecaudos
+spring.datasource.username=adminG2
+spring.datasource.password=admin123
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
