--- a/contract/pom.xml
+++ b/contract/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.banquito.fullpay</groupId>
 	<artifactId>contract</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1-contrato-servicio</version>
 	<name>contract</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
